--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:minSdkVersion="16"
         android:targetSdkVersion="22" />
 
-    <application
+<application
       android:name=".MainApplication"
       android:allowBackup="true"
       android:label="@string/app_name"
@@ -27,6 +27,18 @@
         </intent-filter>
       </activity>
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
+      <activity
+        android:name=".share.ShareActivity"
+        android:configChanges="orientation"
+        android:label="@string/title_activity_share"
+        android:screenOrientation="portrait"
+        android:theme="@style/AppTheme">
+        <intent-filter>
+            <action android:name="android.intent.action.SEND" />
+            <category android:name="android.intent.category.DEFAULT" />        
+            <data android:mimeType="text/plain" />
+        </intent-filter>
+        </activity>
     </application>
 
 </manifest>
