--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-native-vector-icons": "^4.5.0",
     "react-navigation": "^1.2.1",
     "react-redux": "^5.0.7",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-jest": "22.4.1",
