Share completed and refreshing on background

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "firebase": "^4.10.1",
     "react": "16.2.0",
     "react-native": "0.53.3",
+    "react-native-animatable": "^1.2.4",
     "react-native-share-extension": "^1.2.1",
     "react-native-side-menu": "^1.1.3",
     "react-native-vector-icons": "^4.5.0",
