--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "react": "16.2.0",
     "react-native": "0.53.3",
     "react-native-animatable": "^1.2.4",
+    "react-native-dropdownalert": "^3.4.0",
+    "react-native-modal": "^5.3.0",
     "react-native-share-extension": "^1.2.1",
     "react-native-side-menu": "^1.1.3",
     "react-native-vector-icons": "^4.5.0",
     "react-navigation": "^1.2.1",
+    "react-navigation-redux-helpers": "^1.0.3",
     "react-redux": "^5.0.7",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
